# minimal-crypto

./: CMakeLists.txt
crypto/: CMakeLists.txt  cpu-arm.c  cpu-intel.c  crypto.c  internal.h
crypto/chacha/: CMakeLists.txt  chacha_generic.c  chacha_neon.c  chacha_vec.c  chacha_vec_aarch64_generate.go
crypto/cipher/: CMakeLists.txt  aead_test.cc  cipher.c  cipher_test.cc
crypto/cipher/test/: cipher_test.txt
crypto/digest/: CMakeLists.txt
include/openssl/: base.h  chacha.h  thread.h
